# graphics-fundamentals

./: Cargo.toml
src/: camera.rs  lib.rs  main.rs  model.rs  obj_mesh.rs  obj_parse.rs  resources.rs  texture.rs  timing.rs  uniforms.rs
src/assets/: all_materials.mtl  cube.mtl
src/assets/materials/: all_materials.mtl
src/shaders/: black.wgsl  debug_light.wgsl  debug_vector.wgsl  shader.wgsl  shader2.wgsl
