[package]
name = "graphics-fundamentals"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bytemuck = { version = "1.25.0", features = [ "derive" ] }
cgmath = "0.18.0"
env_logger = "0.11.8"
image = { version = "0.24", default-features = false, features = ["png", "jpeg"] }
log = "0.4.29"
pollster = "0.4.0"
tobj = "4.0.3"
wgpu = "28.0.0"
winit = "0.30.12"

